language/move-lang/tests/move_check/typing/shadowing_invalid_scope.exp
error[E03009]: unbound variable
  ┌─ tests/move_check/typing/shadowing_invalid_scope.move:5:10
  │
5 │         (x: bool);
  │          ^ Invalid variable usage. Unbound variable 'x'

