language/move-lang/tests/move_check/typing/shadowing_invalid_scope.move
module M {

    fun t0() {
        { let x = false; };
        (x: bool);
    }

}
